<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="5dp"                        
            android:layout_marginTop="5dp"
            android:text="@string/lblDireccion" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView1"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/txtDefaultIp" />

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
 			android:layout_below="@+id/editText1"
 			android:orientation="horizontal"       
            android:layout_centerHorizontal="true" 
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp">

            <Button
                android:id="@+id/btnConnect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="myClickHandler"
                android:text="@string/lblbtnconnect" />

            <Button
                android:id="@+id/btnDisconnect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:onClick="myClickHandler"
                android:text="@string/lblbtndisconnect" />

        </LinearLayout>

		  <TextView
		      android:id="@+id/textView2"
		      android:layout_width="fill_parent"
		      android:layout_height="fill_parent"
		      android:layout_below="@id/linearLayout1"
		      android:layout_centerHorizontal="true"
		      android:layout_marginLeft="5dp"
		      android:layout_marginRight="5dp"
		      android:layout_marginTop="5dp"
		      android:text="@string/lbltxtlog" />

    </RelativeLayout>

</ScrollView>